Migrate to Spring Boot 4.0.3 using OpenRewrite
Run the UpgradeSpringBoot_4_0 OpenRewrite recipe to automate the bulk of
the migration, then manually fix Jackson 3.x API breaks the recipe missed:

Automated by OpenRewrite:
- spring-boot-starter-web → spring-boot-starter-webmvc
- com.fasterxml.jackson → tools.jackson namespace
- flyway-core → spring-boot-starter-flyway
- Testcontainers 1.x → 2.x artifact names
- String.format() → .formatted()
- Import ordering, brace style, deprecated property removal
- JUnit 5.14.3, Mockito 5.23.0, Gradle 9.4.1

Manual fixes for Jackson 3.x:
- ObjectMapper → JsonMapper.builder() pattern
- JsonParser.Feature → JsonReadFeature
- fieldNames()/fields() → propertyNames()/properties()
- IOException catch → JacksonException catch (now unchecked)
- Remove JavaTimeModule registration (built-in in Jackson 3.x)
- Fix Objects::isNull method reference in DevServerCommand

Closes #10